--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="cloudy-knoxville-gradient">
   <app-root></app-root>
 </body>
 </html>
