--- a/src/index.html
+++ b/src/index.html
@@ -19,5 +19,9 @@
 </head>
 <body class="cloudy-knoxville-gradient">
   <app-root></app-root>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
 </body>
 </html>
